Fix warnings reported by openjdk-11 compiler